Fix toolbar collapse icon

--- a/src/static/scss/components/_tool-bar.scss
+++ b/src/static/scss/components/_tool-bar.scss
@@ -50,7 +50,33 @@
   }
 
   & > .tools > .icon.-collapse {
-    transition: all .3s $swift-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 4.5rem;
+
+    @include hovering-label(left, 1.5em, $color-gray, .875rem);
+
+    &:hover > svg path {
+      fill: $color-deep-gray;
+    }
+
+    &::after {
+      font-weight: 400 !important;
+      background-color: rgba(#FFF, .95);
+    }
+
+    &.-active {
+       > svg path {
+        fill: $color-brand;
+      }
+    }
+
+    &.-settings {
+      margin-top: auto;
+    }
 
     .arrow1,
     .arrow2 {
@@ -61,67 +87,18 @@
     .arrow4 {
       display: block;
     }
-  }
 
-  & > .tools > .icon.-collapsed {
-    .arrow1,
-    .arrow2 {
-      display: block;
-    }
+    &.-collapsed {
+      transition: all .3s $swift-out;
 
-    & > .icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      width: 100%;
-      height: 4.5rem;
-
-      @include hovering-label(left, 1.5em, $color-gray, .875rem);
-
-      &:hover > svg path {
-        fill: $color-deep-gray;
+      .arrow1,
+      .arrow2 {
+        display: block;
       }
 
-      &::after {
-        font-weight: 400 !important;
-        background-color: rgba(#FFF, .95);
-      }
-
-      &.-active {
-         > svg path {
-          fill: $color-brand;
-        }
-      }
-
-      &.-settings {
-        margin-top: auto;
-      }
-
-      &.-collapse {
-        transition: all .3s $swift-out;
-
-        .arrow1,
-        .arrow2 {
-          display: none;
-        }
-
-        .arrow3,
-        .arrow4 {
-          display: block;
-        }
-      }
-
-      &.-collapsed {
-        .arrow1,
-        .arrow2 {
-          display: block;
-        }
-
-        .arrow3,
-        .arrow4 {
-          display: none;
-        }
+      .arrow3,
+      .arrow4 {
+        display: none;
       }
     }
   }
